test/enumprivate.go
// errorcheckdir

// Copyright 2026 The Go Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

// Verify that private variants of imported generic enums remain in export data.

package ignored
